Refactoring pour avoir une architecture classique. Ajout de l'accéléromètre. Bug sur l'accéléromètre.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /Runbelievable/platforms/
 Runbelievable/.project
 Runbelievable/www/.project
+RunbelievableAndroid/platforms/
+RunbelievableAndroid/
+Runbelievable/plugins/
