--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ Runbelievable/www/.project
 RunbelievableAndroid/platforms/
 RunbelievableAndroid/
 Runbelievable/plugins/
+Runbelievable/nbproject/project.properties
+Runbelievable/nbproject/project.xml
