--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ Runbelievable/www/.project
 RunbelievableAndroid/platforms/
 RunbelievableAndroid/
 Runbelievable/plugins/
+/Runbelievable/www/Run Believable/nbproject/private/
+Runbelievable/www/nbproject/project.properties
+Runbelievable/www/nbproject/project.xml
