partie session du site internet fonctionnel

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Runbelievable/nbproject/project.properties
 Runbelievable/nbproject/project.xml
 Runbelievable/www/nbproject/project.properties
 Runbelievable/www/nbproject/project.xml
+/Interfaceweb/nbproject/private/
