--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ Runbelievable/nbproject/project.xml
 Runbelievable/www/nbproject/project.properties
 Runbelievable/www/nbproject/project.xml
 /Interfaceweb/nbproject/private/
+Interface web/
